section -sobre mim-

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#sobre-mim" class="itens-menu-desktop">
+                    <a href="#bg-sobre-mim" class="itens-menu-desktop">
                         <span class="material-symbols-outlined">person</span>
                         SOBRE MIM
                     </a>
@@ -91,7 +91,7 @@
                     <a href="#home" class="itens-menu-mobile">HOME</a>
                 </li>
                 <li>
-                    <a href="#sobre-mim" class="itens-menu-mobile">SOBRE MIM</a>
+                    <a href="#bg-sobre-mim" class="itens-menu-mobile">SOBRE MIM</a>
                 </li>
                 <li>
                     <a href="#skills" class="itens-menu-mobile">SKILLS</a>
@@ -123,22 +123,29 @@
 
         </section>
 
-        <section id="sobre-mim">
-
+        <section id="bg-sobre-mim">
+            
             <h2>SOBRE MIM</h2>
 
-            <h3>👋 Olá! Meu nome é Gilberto Lopes.</h3>
+        </section>
 
-            <p>🧑‍💻 Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador full stack. 🖥️</p>
+        <section id="sobre-mim">
 
-            <p>
-            💬 Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos online como cursos, documentações e tutoriais. Meu plano para o futuro é quando estiver trabalhando como programador fazer um curso superior e inglês.
-            Estou trabalhando em projetos pessoais para praticar os conhecimentos que estou adquirindo.
-            HTML | CSS | JavaScript.
-            Familiaridade com Git e GitHub.
-            </p>
-
-            <p>Embora ainda esteja no início da minha caminha até me tornar um programador, gostaria de ter uma oportunidade para aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores para validar meus conhecimentos e consequentemente evoluir na carreira.</p>
+            <div class="container-sobre">
+                <div class="container-img-sobremim">
+                    <img src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
+                </div>
+                <div class="container-texto-sobremim">
+                    <h3>👋 Olá, meu nome é Gilberto Lopes</h3>
+                    <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador. 🧑‍💻🖥️
+                    <br>
+            
+                    Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos da internet como cursos, documentações e tutoriais. Futuramente quando estiver trabalhando como programador pretendo fazer curso superior e inglês para obter ainda mais conhecimento. <br>
+                    Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, onde posso contribuir com minhas ideias, validar meus conhecimentos e também aprender com outros desenvolvedores.
+                    <br>
+                    <p>💬 "Entender como a máquina funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com a máquina através de uma linguagem de códigos complexos que somente eu e ela entendemos. Programá-la para que ela resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é ser programador</strong>."</p>
+                </div>
+            </div>
 
         </section>
 
@@ -148,6 +155,8 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic rerum provident nemo similique ipsa unde incidunt! Ipsum amet ratione cum! Explicabo ipsa unde repudiandae. Illum aut tempora officiis fuga error?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic rerum provident nemo similique ipsa unde incidunt! Ipsum amet ratione cum! Explicabo ipsa unde repudiandae. Illum aut tempora officiis fuga error?</p>
+
+            <p>git, github, linux</p>
 
         </section>
 
