--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <i id="js" class='bx bxl-javascript'></i>
                         <i id="node" class='bx bxl-nodejs'></i>
                         <i id="git" class='bx bxl-git'></i>
-                        <img src="img/linux.svg" alt="linux" class="tux">
+                        <img src="img/tux-full.png" alt="linux" class="tux">
                     </div>
                 </div>
                 <div class="container-soft-skills">
