--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <!-- SECTION PROJETOS -->
         <section id="projetos">
             <h2>PROJETOS</h2>
+            <i id="seta-esquerda" class='bx bx-chevrons-left'></i>
+            <i id="seta-direita" class='bx bx-chevrons-right'></i>
             <div class="container-projetos">
-                <i id="seta-esquerda" class='bx bx-chevrons-left'></i>
-                <i id="seta-direita" class='bx bx-chevrons-right'></i>
                 <div class="card-projetos">
                     <h3>Mascote do Android</h3>
                     <!-- <p>
@@ -250,7 +250,7 @@
                     <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
                 </div>
                 <div class="card-projetos">
-                    <h3>Portifólio</h3>
+                    <h3>1-Portifólio</h3>
                     <!-- <p>
                         O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
                     </p>
@@ -267,7 +267,41 @@
                     <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
                 </div>
                 <div class="card-projetos">
-                    <h3>Portifólio</h3>
+                    <h3>2-Portifólio</h3>
+                    <!-- <p>
+                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
+                    </p>
+                    <p>Linguagens utilizadas neste projeto:</p> -->
+                    <div class="div-icon">
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                    </div>
+                    <div class="div-iframe">
+                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
+                        </iframe>
+                    </div>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
+                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
+                </div>
+                <div class="card-projetos">
+                    <h3>3-Portifólio</h3>
+                    <!-- <p>
+                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
+                    </p>
+                    <p>Linguagens utilizadas neste projeto:</p> -->
+                    <div class="div-icon">
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                    </div>
+                    <div class="div-iframe">
+                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
+                        </iframe>
+                    </div>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
+                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
+                </div>
+                <div class="card-projetos">
+                    <h3>4-Portifólio</h3>
                     <!-- <p>
                         O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
                     </p>
