add smartphones projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/mobile.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Gilberto_Lopes</title>
 </head>
 <body>
@@ -84,7 +83,7 @@
                 <i class='bx bxl-linkedin-square' ></i>
                 <i class='bx bxl-instagram' ></i>
             </div>
-            <button class="btn-tema">
+            <button id="btn-tema">
                 <label for="btn-tema">
                     <div id="ball" class="ball"></div>
                     <span id="sun" class="material-symbols-outlined">light_mode</span>
@@ -197,125 +196,56 @@
         <!-- SECTION PROJETOS -->
         <section id="projetos">
             <h2>PROJETOS</h2>
-            <i id="seta-esquerda" class='bx bx-chevrons-left'></i>
-            <i id="seta-direita" class='bx bx-chevrons-right'></i>
+            <p>Aqui você encontra alguns dos projetos que fiz. Você pode navegar por cada projeto sem necessariamente abri-lo. Basta rolar a tela dos smartphones abaixo ou se preferir, clique em "visitar projeto" para acessar o site do projeto. Caso queira analizar o código e saber como o projeto foi feito, clique em "Código fonte".</p>
             <div class="container-projetos">
                 <div class="card-projetos">
+                    <h3>Portifólio Gilberto</h3>
+                    <div>
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                        <i class='bx bxl-javascript'></i>
+                    </div>
+                    <div class="iphone">
+                        <iframe src="https://developer-gilberto.github.io/portifolio-gilberto/" frameborder="0"></iframe>
+                    </div>
+                    <a href="https://developer-gilberto.github.io/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="card-projetos">
                     <h3>Mascote do Android</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
+                    <div>
                         <i class='bx orange5 bxl-html5'></i>
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
-                    <iframe src="https://developer-gilberto.github.io/project-android/" scrolling="auto" frameborder="0">
-                    </iframe>
-                    <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer">Código fonte</a>
+                    <div class="iphone">
+                        <iframe src="https://developer-gilberto.github.io/project-android/" frameborder="0"></iframe>
+                    </div>
+                    <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
                     <h3>Cordel moderno</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
+                    <div>
                         <i class='bx orange5 bxl-html5'></i>
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/projeto-cordel/" scrolling="auto" frameborder="0">
-                        </iframe>
+                    <div class="iphone">
+                        <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe>
                     </div>
-                    <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/projeto-cordel" target="_blank" rel="noopener noreferrer">Código fonte</a>
+                    <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
-                    <h3>Portifólio</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
+                    <h3>Portifólio teste</h3>
+                    <div>
                         <i class='bx orange5 bxl-html5'></i>
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
-                        </iframe>
+                    <div class="iphone">
+                        <iframe src="https://developer-gilberto.github.io/portfolio/" frameborder="0"></iframe>
                     </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>1-Portifólio</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
-                        </iframe>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>2-Portifólio</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
-                        </iframe>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>3-Portifólio</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
-                        </iframe>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>4-Portifólio</h3>
-                    <!-- <p>
-                        O objetivo deste projeto é apenas por em prática os conhecimentos que estou adquirindo ao estudar desenvolvimento web e programação em geral.
-                    </p>
-                    <p>Linguagens utilizadas neste projeto:</p> -->
-                    <div class="div-icon">
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="div-iframe">
-                        <iframe src="https://developer-gilberto.github.io/portfolio/" scrolling="auto" frameborder="0">
-                        </iframe>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Visite o projeto</a>
-                    <a href="https://github.com/developer-gilberto/portfolio" target="_blank" rel="noopener noreferrer">Código fonte</a>
+                    <a href="https://developer-gilberto.github.io/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
             </div>
         </section>
