alert -em breve-

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
         </nav>
 
-        <!-- BUTTON MENU -->
+        <!-- BUTTON MENU MOBILE-->
         <button id="btn-burguer">
             <label for="btn-burguer">
                 <span class="span-1"></span>
@@ -71,7 +71,7 @@
             </label>
         </button>
 
-        <!-- MENU LATERAL-->
+        <!-- MENU MOBILE-->
         <menu class="menu">
             <img class="img-profile" src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
             <div class="container-email">
@@ -80,8 +80,9 @@
             </div>
             <div class="container-sociais">
                 <a href="https://github.com/developer-gilberto" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="https://www.instagram.com/developer.gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram' ></i></a>
+                <a id="linkedin" href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a id="yt" href="#"><i class='bx bxl-youtube'></i></a>
             </div>
             <button id="btn-tema">
                 <label for="btn-tema">
@@ -133,7 +134,6 @@
                 <i class='bx bxl-javascript'></i>
                 <i class='bx bxl-nodejs'></i>
             </div>
-
         </section>
         
         <!-- SECTION SOBRE MIM -->
@@ -295,5 +295,6 @@
 
     <!-- JavaScript -->
     <script src="js/scripts.js"></script>
+
 </body>
 </html>
