--- a/index.html
+++ b/index.html
@@ -247,6 +247,20 @@
                     <a href="https://github.com/developer-gilberto/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
+                    <h3>Biomédica Dhara</h3>
+                    <div>
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                        <i class='bx bxl-javascript'></i>
+                    </div>
+                    <div class="iphone">
+                        <!-- <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe> -->
+                        <img src="img/biomedica-dhara.png" alt="Projeto Biomédica">
+                    </div>
+                    <a href="https://developer-gilberto.github.io/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="card-projetos">
                     <h3>Portifólio teste</h3>
                     <div>
                         <i class='bx orange5 bxl-html5'></i>
@@ -303,6 +317,9 @@
         <p>&copy; Copy Right</p>
         <p>All rights reserved 2023</p>
         <p>Site criado e desenvolvido por <strong>Gilberto Lopes.</strong></p>
+
+        <a href="#home"><i id="btn-topo" class='bx bxs-up-arrow-square'></i></a>
+
     </footer>
 
     <!-- JavaScript -->
