--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <title>Gilberto_Lopes</title>
 </head>
 <body>
+
+    <!-- OVERLAY -->
+    <div class="overlay"></div>
+
+    <!-- CABEÇALHO -->
     <header>
 
         <!-- LOGOMARCA -->
@@ -26,7 +31,7 @@
             </p>
         </a>
 
-        <!-- NAV DESKTOP-->
+        <!-- NAVEGAÇÃO DESKTOP-->
         <nav class="nav-desktop">
             <ul>
                 <li>
