add img developer in home

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <i class='bx bxl-javascript'></i>
                 <i class='bx bxl-nodejs'></i>
             </div>
+            <img class="img-dev-home" src="img/dev.png" alt="Developer">
         </section>
         
         <!-- SECTION SOBRE MIM -->
@@ -155,20 +156,22 @@
             <div class="container-sobre">
                 <div class="container-texto-sobremim">
                     <h3>👋 Olá, meu nome é Gilberto Lopes</h3>
+                    <div class="container-img-developer">
+                        <img class="img-dev-sobremim" src="img/dev.png" alt="Developer">
+                        <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
+                    </div><br>
                     <p>
-                        Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.🧑‍💻
-                        <br>
                         Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos da internet como cursos, documentações e tutoriais. Futuramente quando estiver trabalhando como programador pretendo fazer curso superior e inglês para obter ainda mais conhecimento.
                     </p>
                     <p>
                         Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, onde posso contribuir com minhas ideias, validar meus conhecimentos e também aprender com outros desenvolvedores.
-                    </p>
+                    </p><br>
                     <p>
-                        💬 "Entender como a máquina funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com a máquina através de uma linguagem de códigos complexos que somente eu e ela entendemos. Programá-la para que ela resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é ser programador</strong>."
+                        💬 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."
                     </p>
                 </div>
                 <div class="container-img-sobremim">
-                    <img src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
+                    <img class="img-gil-sobremim" src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
                 </div>
             </div>
         </section>
@@ -312,19 +315,20 @@
 
     <!-- FOOTER -->
     <footer>
-        <p id="logo-footer">
-            <span class="maior-menor">&lt;</span>
-            <span class="developer">Developer</span>
-            <span class="gilberto">Gilberto</span>
-            <span class="maior-menor">&gt;</span>&reg;
-        </p>
-
+        <p>Website created and developed by </p>
+        <a class="logomarca" href="https://github.com/developer-gilberto" target="_blank" rel="noopener noreferrer">
+            <p class="logo-animado">
+                <span class="maior-menor">&lt;</span>
+                <span class="developer">Developer</span>
+                <span class="gilberto">Gilberto</span>
+                <span class="maior-menor">&gt;</span><span class="registrada">&reg;</span>
+            </p>
+        </a>
         <p>&copy; Copy Right</p>
         <p>All rights reserved 2023</p>
-        <p>Site criado e desenvolvido por <strong>Gilberto Lopes.</strong></p>
 
+        <!-- BOTÃO IR PARA TOPO -->
         <a href="#home"><i id="btn-topo" class='bx bxs-up-arrow-square'></i></a>
-
     </footer>
 
     <!-- JavaScript -->
